Tue Oct 18 18:33:04 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* examples/Kokyu_dsrt_schedulers/fp_example/Makefile.am:
	* examples/Kokyu_dsrt_schedulers/mif_example/Makefile.am:
	* examples/Kokyu_dsrt_schedulers/muf_example/Makefile.am:

	  Regenerate due to change in Kokyu_dsrt_schedulers.mpb.

Tue Oct 18 17:24:26 MST 2005  Yan Dai  <dai_y@ociweb.com>

        Merged in the CSD (Custom Servant Dispatching) feature from OCI.

        The main changes to existing code are:

          - Four hooks are added to TAO_Root_POA to notify the CSD when poa
            is activated/deactivated and servant is activated/deactivated.
            Some areas of the code were instrumented to call these hooks to
            notify the CSD Strategy object of POA activation and deactivation
            "events".  Likewise, code was added to notify the CSD Strategy object
            of servant activation and deactivation "events".
          - A virtual method do_dispatch() is added to the TAO_Object_Adapter so
            the CSD object adpater can override the default implementation to
            dispatch the requests to the CSD strategy.
          - The remote requests and the collocated oneway requests are cloned when
            they are dispatched to the CSD strategy. To support the TAO_ServerRequest
            clone in the CSD library, the friendship is added to the TAO_ServerRequest
            class and it's data member classes such as TAO_Service_Context class,
            TAO_Operation_Details class and TAO_Tagged_Profile class.

        * tao/PortableServer/Root_POA.cpp:
        * tao/PortableServer/Root_POA.h:

          Added four hooks.

        * tao/PortableServer/Object_Adapter.cpp:
        * tao/PortableServer/Object_Adapter.h:
        * tao/PortableServer/POAManager.cpp:
        * tao/PortableServer/ServantRetentionStrategyRetain.cpp:

          Instrumented to call the hooks.

        * tao/operation_details.h:
        * tao/Service_Context.h: